<resources>
    <string name="app_name">Defter</string>
    <string name="home">Home</string>
    <string name="addNew">Add New</string>
    <string name="dates">Dates</string>
    <string name="goToAccount">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment">Comment</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="warningText">You can add only 10 moments per day</string>
    <string name="remainder">Number of moments remaining:\u0020</string>
    <string name="search">Search</string>
    <string name="moments">Moments</string>
    <string name="email">E Mail</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="authFailed">Authentication failed.</string>
    <string name="add">Add</string>
    <string name="permission">Permission needed for gallery!</string>
    <string name="givePermission">Give Permission</string>
    <string name="momentAdded">Moment Added</string>
    <string name="loading">Loading</string>
    <string name="pleaseSelectPhoto">Please Select A Photo</string>
    <string name="cantAddMoment">You can not add more then 10 moment.</string>
    <string name="errorText">There is a problem!</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="page_home">Home</string>
    <string name="account">Account</string>
    <string name="page_addNewMoment">Add New Moment</string>
    <string name="page_selectPhoto">Select Photo</string>
    <string name="turnLeft">Turn Left</string>
    <string name="turnRight">Turn Right</string>
    <string name="delete">Delete</string>
    <string name="deleteThisMoment">Delete This Moment</string>
</resources>