<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddNewMomentFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:liftOnScroll="true"
            android:elevation="15dp"
            app:title="@string/page_addNewMoment" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                app:cardCornerRadius="25dp">

                <ImageView
                    android:id="@+id/imageView_addPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="?attr/colorPrimary"
                    android:scaleType="centerCrop"
                    android:src="@drawable/avatars"/>
            </androidx.cardview.widget.CardView>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_dailyMoments"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="false"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/comment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:maxLines="15" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/updateSuccessText"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:visibility="gone"
                        android:text="@string/momentAdded"
                        android:gravity="center_vertical"
                        app:drawableStartCompat="@drawable/ic_baseline_check_24" />


                    <LinearLayout
                        android:id="@+id/loadingLayout"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:visibility="gone"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:visibility="visible"
                            android:layout_height="match_parent"
                            android:text="@string/loading"
                            android:gravity="center_vertical"
                            android:layout_marginRight="3dp"/>

                        <ProgressBar
                            android:layout_width="15dp"
                            android:layout_marginRight="10dp"
                            android:layout_height="match_parent"/>

                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:visibility="visible"
                            android:layout_marginRight="10dp"
                            android:layout_height="match_parent"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/button_add"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/warningText"
                    android:textColor="?attr/colorError" />

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:gravity="end"-->
<!--                    android:orientation="horizontal">-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:text="@string/remainder"-->
<!--                        android:textColor="?attr/colorError" />-->

<!--                    <TextView-->
<!--                        android:id="@+id/editText_remaining"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:textColor="?attr/colorError" />-->
<!--                </LinearLayout>-->

            </LinearLayout>

        </LinearLayout>

    </ScrollView>






<!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:padding="20dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--        <Button-->
<!--            android:id="@+id/button_cancel"-->
<!--            style="?attr/materialButtonOutlinedStyle"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_margin="5dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/cancel" />-->

<!--        <Button-->
<!--            android:id="@+id/button_save"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_margin="5dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/post" />-->
<!--    </LinearLayout>-->



</LinearLayout>